删除了一些冗余代码